--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
-    "recommendations": [
-        "vscodeshift.material-ui-snippets",
-        "ms-vsliveshare.vsliveshare-pack",
-        "jawandarajbir.react-vscode-extension-pack",
-        "donjayamanne.git-extension-pack"
-    ]
+  "recommendations": [
+    "vscodeshift.material-ui-snippets",
+    "ms-vsliveshare.vsliveshare-pack",
+    "jawandarajbir.react-vscode-extension-pack",
+    "eamodio.gitlens"
+  ]
 }
